--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "chart.js": "^4.4.0",
     "font-awesome": "^4.7.0",
     "framer-motion": "^10.16.4",
-    "next": "latest",
+    "next": "^13.5.4",
     "plotly.js": "^1.47.4",
     "prism-react-renderer": "^2.1.0",
     "react": "18.2.0",
@@ -38,7 +38,8 @@
     "react-plotly.js": "^2.6.0",
     "react-router-dom": "^6.16.0",
     "react-syntax-highlighter": "^15.5.0",
-    "react-twitch-embed": "^3.0.1"
+    "react-twitch-embed": "^3.0.1",
+    "sharp": "^0.32.6"
   },
   "engines": {
     "node": ">=18"
