--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "next": "^13.5.4",
     "plotly.js": "^1.47.4",
     "prism-react-renderer": "^2.1.0",
+    "prismjs": "^1.29.0",
     "react": "18.2.0",
     "react-bootstrap": "^2.9.0",
     "react-chartjs-2": "^5.2.0",
