--- a/package.json
+++ b/package.json
@@ -37,8 +37,10 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
     "react-plotly.js": "^2.6.0",
+    "react-responsive": "^10.0.0",
     "react-router-dom": "^6.16.0",
     "react-syntax-highlighter": "^15.5.0",
+    "react-toastify": "^10.0.5",
     "react-twitch-embed": "^3.0.1",
     "sharp": "^0.32.6"
   },
