--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "@metaplex-foundation/beet": "^0.7.1",
     "@metaplex-foundation/beet-solana": "^0.4.0",
     "@metaplex-foundation/js": "^0.19.5",
+    "@metaplex-foundation/mpl-core": "^0.4.5",
+    "@metaplex-foundation/umi": "^0.9.1",
+    "@metaplex-foundation/umi-bundle-defaults": "^0.9.1",
     "@project-serum/borsh": "^0.2.5",
     "@solana/wallet-adapter-react": "^0.15.35",
     "@solana/wallet-adapter-react-ui": "^0.9.34",
