--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "build": "next build",
     "dev": "next dev",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --check --ignore-path .gitignore .",
+    "format:fix": "prettier --write --ignore-path .gitignore ."
   },
   "dependencies": {
     "@chakra-ui/next-js": "^2.1.5",
@@ -57,6 +59,7 @@
     "@types/react": "18.2.28",
     "eslint": "8.51.0",
     "eslint-config-next": "13.5.4",
+    "prettier": "^3.2.5",
     "typescript": "5.2.2"
   }
 }
