--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@metaplex-foundation/mpl-core": "^0.4.5",
     "@metaplex-foundation/umi": "^0.9.1",
     "@metaplex-foundation/umi-bundle-defaults": "^0.9.1",
+    "@next/bundle-analyzer": "^14.2.3",
     "@project-serum/borsh": "^0.2.5",
+    "@solana/spl-token": "^0.4.6",
     "@solana/wallet-adapter-react": "^0.15.35",
     "@solana/wallet-adapter-react-ui": "^0.9.34",
     "@solana/wallet-adapter-wallets": "^0.19.23",
-    "@solana/web3.js": "^1.87.1",
+    "@solana/web3.js": "^1.91.8",
     "@types/react-plotly.js": "^2.6.1",
     "better-react-mathjax": "^2.0.3",
     "bootstrap": "^5.3.2",
@@ -38,6 +40,7 @@
     "react": "18.2.0",
     "react-bootstrap": "^2.9.0",
     "react-chartjs-2": "^5.2.0",
+    "react-datepicker": "^6.9.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
@@ -45,6 +48,7 @@
     "react-responsive": "^10.0.0",
     "react-router-dom": "^6.16.0",
     "react-syntax-highlighter": "^15.5.0",
+    "react-time-picker": "^7.0.0",
     "react-toastify": "^10.0.5",
     "react-twitch-embed": "^3.0.1",
     "sharp": "^0.32.6"
