--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "chart.js": "^4.4.0",
     "font-awesome": "^4.7.0",
     "framer-motion": "^10.16.4",
+    "lightweight-charts": "^4.1.4",
     "next": "^13.5.4",
     "plotly.js": "^1.47.4",
     "prism-react-renderer": "^2.1.0",
