--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-plotly.js": "^2.6.0",
     "react-responsive": "^10.0.0",
     "react-router-dom": "^6.16.0",
+    "react-spinners": "^0.13.8",
     "react-syntax-highlighter": "^15.5.0",
     "react-time-picker": "^7.0.0",
     "react-toastify": "^10.0.5",
