--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-device-detect": "^2.2.3",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
+    "react-player": "^2.16.0",
     "react-plotly.js": "^2.6.0",
     "react-responsive": "^10.0.0",
     "react-router-dom": "^6.16.0",
