--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,6 @@
     "**/*.ts",
     "**/*.tsx",
     "components/bonkathon/topNav.tsx"
-  ],
+, "pages/api/auth/[...nextauth].js"  ],
   "exclude": ["node_modules"]
 }
