--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "@types/react-plotly.js": "^2.6.1",
         "better-react-mathjax": "^2.0.3",
         "bootstrap": "^5.3.2",
+        "canvas": "^2.11.2",
         "chart.js": "^4.4.0",
         "firebase": "^10.12.2",
         "firebase-admin": "^12.2.0",
