--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
         "react-toastify": "^10.0.5",
         "react-twitch-embed": "^3.0.1",
         "sharp": "^0.32.6",
+        "swiper": "^11.1.4",
         "twitter-api-v2": "^1.17.1"
     },
     "engines": {
