--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
         "react-twitch-embed": "^3.0.1",
         "sharp": "^0.32.6",
         "text-to-svg": "^3.1.5",
+        "swiper": "^11.1.4",
         "twitter-api-v2": "^1.17.1"
     },
     "engines": {
