--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@solana/wallet-adapter-react-ui": "^0.9.34",
         "@solana/wallet-adapter-wallets": "^0.19.23",
         "@solana/web3.js": "^1.91.8",
+        "@tiplink/wallet-adapter": "^2.1.18",
         "@types/react-plotly.js": "^2.6.1",
         "better-react-mathjax": "^2.0.3",
         "bootstrap": "^5.3.2",
