--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "better-react-mathjax": "^2.0.3",
         "bootstrap": "^5.3.2",
         "chart.js": "^4.4.0",
+        "emoji-regex": "^10.3.0",
         "firebase": "^10.12.2",
         "firebase-admin": "^12.2.0",
         "font-awesome": "^4.7.0",
@@ -62,6 +63,7 @@
         "swiper": "^11.1.4",
         "text-to-svg": "^3.1.5",
         "tweetnacl": "^1.0.3",
+        "twemoji": "^14.0.2",
         "twitter-api-v2": "^1.17.1"
     },
     "engines": {
