--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "@solana/web3.js": "^1.91.8",
         "@tiplink/wallet-adapter": "^2.1.18",
         "@types/react-plotly.js": "^2.6.1",
+        "@types/twemoji-parser": "^13.1.4",
         "better-react-mathjax": "^2.0.3",
         "bootstrap": "^5.3.2",
         "chart.js": "^4.4.0",
@@ -64,7 +65,9 @@
         "text-to-svg": "^3.1.5",
         "tweetnacl": "^1.0.3",
         "twemoji": "^14.0.2",
-        "twitter-api-v2": "^1.17.1"
+        "twemoji-parser": "^14.0.0",
+        "twitter-api-v2": "^1.17.1",
+        "zustand": "^4.5.4"
     },
     "engines": {
         "node": ">=18"
